--- a/sandbox.html/styles.css
+++ b/sandbox.html/styles.css
@@ -21,7 +21,7 @@ body {
     background-color: #333;
     padding: 10px 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
