--- a/sandbox.html/styles.css
+++ b/sandbox.html/styles.css
@@ -31,6 +31,28 @@ body {
     align-items: center;
 }
 
+.dark-mode {
+    background-color: black;
+    color: white;
+}
+
+.dark-mode header {
+    background-color: black;
+    color: white;
+}
+
+.dark-mode div {
+    background-color: gray;
+    color: white;
+}
+.dark-mode div p {
+    background-color: gray;
+    color: white;
+}
+.dark-mode header p {
+    color: white;
+}
+
 .menu li {
     margin-right: 20px;
     position: relative;
